Fix: Whitespace is now replaced with spaces in read only editors, which makes tabs display properly

--- a/src/components/TextEditors/editorStyles.css
+++ b/src/components/TextEditors/editorStyles.css
@@ -40,6 +40,10 @@
 }
 .ql-editor {
     min-height: 6rem;
+    white-space: pre-wrap;
+    white-space: -moz-pre-wrap;
+    white-space: -pre-wrap;
+    white-space: -o-pre-wrap;
 }
 .ql-editor div,
 .ql-editor ol,
